# ChangeLog for dev-libs/nspr
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.239 2013/09/27 01:54:39 anarchy Exp $

*nspr-4.10.1 (27 Sep 2013)

  27 Sep 2013; Jory A. Pratt <anarchy@gentoo.org> +nspr-4.10.1.ebuild:
  NVB to 4.10.1

  26 Aug 2013; Agostino Sarubbo <ago@gentoo.org> nspr-4.10.ebuild:
  Stable for ppc, wrt bug #479968

  24 Aug 2013; Agostino Sarubbo <ago@gentoo.org> nspr-4.10.ebuild:
  Stable for arm, wrt bug #479968

  24 Aug 2013; Agostino Sarubbo <ago@gentoo.org> nspr-4.10.ebuild:
  Stable for ppc64, wrt bug #479968

  12 Aug 2013; Agostino Sarubbo <ago@gentoo.org> nspr-4.10.ebuild:
  Stable for x86, wrt bug #479968

  12 Aug 2013; Agostino Sarubbo <ago@gentoo.org> nspr-4.10.ebuild:
  Stable for amd64, wrt bug #479968

  20 Jun 2013; Patrick Lauer <patrick@gentoo.org> nspr-4.9.5.ebuild:
  QA: Add s390 stable keyword as all other stable versions were pruned

  19 Jun 2013; Lars Wendler <polynomial-c@gentoo.org>
  +files/nspr-4.7.0-prtime.patch:
  Readded mistakenly removed patch.

  19 Jun 2013; Lars Wendler <polynomial-c@gentoo.org> -nspr-4.8.8.ebuild,
  -nspr-4.8.9.ebuild, -nspr-4.9.ebuild, -nspr-4.9.1.ebuild, -nspr-4.9.2.ebuild,
  -nspr-4.9.2-r1.ebuild, -nspr-4.9.4.ebuild, -nspr-4.9.5-r1.ebuild,
  -nspr-4.9.5-r2.ebuild, -nspr-4.9.6.ebuild, -files/nspr-4.6.1-config.patch,
  -files/nspr-4.7.0-prtime.patch, -files/nspr-4.8.3-aix-soname.patch,
  -files/nspr-4.8-pkgconfig-gentoo-2.patch,
  -files/nspr-4.8-pkgconfig-gentoo-3.patch, -files/nspr-4.9.1-x32_v0.2.patch:
  Removed old versions.

*nspr-4.10 (19 Jun 2013)

  19 Jun 2013; Jory A. Pratt <anarchy@gentoo.org> +nspr-4.10.ebuild:
  Misc bug fixes, http://tinyurl.com/lvrhnoh

*nspr-4.9.6 (29 Mar 2013)

  29 Mar 2013; Jory A. Pratt <anarchy@gentoo.org> +nspr-4.9.6.ebuild:
  Version bump, bmo #807883,782214,812085 includes aarch64 support

*nspr-4.9.5-r2 (12 Mar 2013)
