@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/nss
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.314 2013/09/30 06:23:45 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.315 2013/10/01 13:25:24 jer Exp $
+
+  01 Oct 2013; Jeroen Roovers <jer@gentoo.org> nss-3.15.2.ebuild:
+  Stable for HPPA (bug #486114).
 
   30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> nss-3.15.2.ebuild:
   Stable for x86, wrt bug #486114
